--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -267,7 +267,7 @@ h1 {
 	letter-spacing: 0.05em;
 }
 .btn_upload {
-	max-width: 250px;
+	width: 250px;
 	display: block;
 	background-color: #F3A530;
 }
@@ -456,6 +456,14 @@ textarea {
 	margin: 5px 0;
 	box-sizing: border-box;
 }
+.field-edit {
+	border: 1px solid lightgrey;
+	margin: 10px auto;
+	width: 100%;
+	padding: 6px;
+	display: block;
+	font-size: 0.8em;
+}
 .lbl-create {
 	font-size: 1.1em;
 	font-family: 'Roboto', sans-serif;
@@ -615,14 +623,15 @@ input[type="file"] {
 }
 .dashTitle h1 {
 	font-size: 1.8em;
+	padding: 0;
 }
 
 /* CREAR PARTIDO --------------------- */
 .create-match {
 	width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
+	position: relative;
+	top: 0;
+	left: 0;
 }
 
 /* MIS PARTIDOS ------------------------------- */
@@ -778,7 +787,7 @@ input[type="file"] {
 .views-likes {
 	position: relative;
 	bottom: -120px;
-	left: 10px;
+	left: 20px;
 	color: white;
 }
 .views-likes p {
@@ -891,22 +900,6 @@ footer .copyright {
 }
 .form h6 {
 	display: inline;
-}
-/*input[type="text"] {
-border: 1px solid #30499B;
-margin: 5px auto;
-width: 250px;
-padding: 6px;
-display: block;
-font-size: 0.8em;
-}*/
-input[type="password"] {
-	border: 1px solid #30499B;
-	margin: 5px auto;
-	width: 250px;
-	padding: 6px;
-	display: block;
-	font-size: 0.8em;
 }
 input[type="checkbox"] {
 	display: inline-block;
@@ -1109,8 +1102,9 @@ table {
 		width: 33%;
 	}
 	.dashSection {
-		width:95%;
+		width: 95%;
 	}
+
 
 	@media (min-width: 768px) {
 		header {
@@ -1156,10 +1150,9 @@ table {
 			max-width: 300px;
 		}
 		.create-match {
-
-			position:relative;
-			right:20px;
-
+			position: relative;
+			right: 20px;
+			margin: 60px 0 0 0;
 		}
 		.section_tit {
 			margin-top: 50px;
@@ -1262,7 +1255,7 @@ table {
 		}
 	}
 	.dashSection {
-		width:80%;
+		width: 80%;
 	}
 
 	@media (min-width: 1200px) {
