--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -253,6 +253,7 @@ h1 {
 	margin-top: 0;
 	margin-left: auto;
 	margin-right: auto;
+	height:100%
 }
 .btn-solid-lg {
 	width: 250px;
@@ -317,6 +318,11 @@ h1 {
 	border-right: 1px solid #30499B;
 	color: #333333;
 	margin-right: 5px;
+}
+.buscador-form {
+	height:40px;
+	width:60%;
+	text-align: center;
 }
 
 /* SLIDER  ------------------------------- */
@@ -1031,7 +1037,7 @@ table {
 	}
 	.container-match {
 		height: 300px;
-		width: 30%;
+		width: 250px;
 		margin-right: 5%;
 		margin-bottom: 40px;
 	}
@@ -1157,14 +1163,15 @@ table {
 		.section_tit {
 			margin-top: 50px;
 			text-align: center;
-			font-size: 1.2em;
+			font-size: 1.6em;
 			margin-bottom: 20px;
 			color: #F3A530;
 		}
 		.buscador select {
-			width: 25%;
+			width: 50%;
 			border: 0;
-			border-right: 1px blue solid;
+			height:100%
+			
 		}
 		.btn-solid {
 			max-width: 280px;
