--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -644,9 +644,9 @@ input[type="file"] {
 
 .matches-container {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	flex-wrap: wrap;
-	width:70%;
+	width:100%;
 }
 .container-match {
 	height: 100px;
@@ -778,6 +778,7 @@ input[type="file"] {
 	font-size: 2em;
 	text-align: center;
 	color: white;
+	z-index: 5;
 }
 .plus:hover {
 	background-color: #d87a0e;
@@ -788,12 +789,14 @@ input[type="file"] {
 .bottom {
 	display: none;
 	width: 100%;
-	height: 30%;
+	height: 46%;
+	position: absolute;
+	bottom: 0;
 	background-size: cover;
 }
 .views-likes {
 	position: relative;
-	bottom: -120px;
+	bottom: -102px;
 	left: 20px;
 	color: white;
 }
@@ -982,11 +985,20 @@ table {
 
 /* PROFILE */
 .left-nav {
-	display: none;
+	width:90%
 }
+
+
+.dashMenu {
+	text-align:center;
+}
+
 .flexbox {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-around;
+	flex-direction: column;
+    align-items: center;
 }
 .flexboxNoWrap {
 	display: flex;
@@ -995,8 +1007,8 @@ table {
 .buscar {
 	width: 150px;
 	border: 1px solid #30499B;
-	margin-bottom: 30px;
-	padding: 6px;
+	margin-bottom: 20px;
+    padding: 10px;
 	display: inline-block;
 	font-size: 0.8em;
 }
@@ -1005,20 +1017,21 @@ table {
 	display: inline;
 }
 .main-item {
-	font-size: 0.9em;
+	font-size: 1.2em;
 	color: #30499B;
 	font-weight: 600;
 	margin-bottom: 10px;
 }
 .dropdown-left {
 	margin-bottom: 20px;
-	width: 150px;
+	
 }
 .dropdown-left li {
-	font-size: 0.9em;
+	font-size: 1em;
 	color: black;
 	padding: 6px;
 	margin-left: 5px;
+	height: 25px;
 }
 .dropdown-left li:hover {
 	color: white;
@@ -1112,7 +1125,7 @@ table {
 		width: 95%;
 	}
 
-
+}
 	@media (min-width: 768px) {
 		header {
 			justify-content: center;
@@ -1172,6 +1185,10 @@ table {
 			width: 50%;
 			border: 0;
 			height:100%
+			
+		}
+		.container-match {
+			//flex-basis: 30%
 			
 		}
 		.btn-solid {
@@ -1261,18 +1278,23 @@ table {
 		.list-partidos {
 			width: 80%;
 		}
+		.dashSection {
+			width: 80%;
+		}
+		.flexbox {
+			flex-direction: row;
+			align-items: flex-start; */	
+		}
 	}
-	.dashSection {
-		width: 80%;
-	}
+
 
 	@media (min-width: 1200px) {
 		.container {
 			width: 1170px;
 		}
-		.matches-container {
+		/* .matches-container {
 			justify-content: flex-start;
-		}
+		} */
 		.sport-heading {
 			width: 60%;
 			font-size: 1.6em;
