--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1063,9 +1063,11 @@ table {
 	color: #30499B;
 	font-weight: 600;
 	margin-bottom: 10px;
+	
 }
 .dropdown-left {
 	margin-bottom: 20px;
+	display:none;
 	
 }
 .dropdown-left li {
@@ -1172,6 +1174,9 @@ table {
 	}
 	.userData {
 		float:none;
+	}
+	.dropdown-left {
+		display: block;
 	}
 
 }
