--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -121,6 +121,24 @@ hr {
     font-family: 'Roboto', sans-serif;
 }
 
+.out-section {
+	display:flex;
+	flex-wrap: nowrap;
+
+}
+.info {
+	display: inline-block;
+    width: 90%;
+    margin: 10px;
+}
+.info h3 {
+	margin: 20px 0;
+	font-size: 1.4em;
+}
+.info p {
+	font-size: 1.2em;
+	line-height: 1.5;
+}
 
 /* HEADER ------------------------------- */
 .head-left {
@@ -281,8 +299,9 @@ h1 {
 	letter-spacing: 0.05em;
 }
 .btn_upload {
-	width: 250px;
+	width: 100%;
 	display: block;
+	text-align: center;
 	background-color: #F3A530;
 }
 .btn_upload:hover {
@@ -346,8 +365,9 @@ h1 {
 
 }
 .searchResults {
-	width:100%;
+	flex-basis: 70%;
 }
+
 
 
 
@@ -469,7 +489,20 @@ h1 {
 	max-width: 300px;
 	padding-top: 25px;
 	padding-bottom: 25px;
+	border: 2px solid blue;
 }
+.cajita {
+	width: 450px;
+	height: 300px;
+}
+
+.form-cajita {
+	margin: 10px;
+}
+.linkeo h6{
+	line-height: 1.5;
+}
+
 .hide {
 	display:none;
 }
@@ -493,8 +526,9 @@ textarea {
 	margin: 10px auto;
 	width: 100%;
 	padding: 6px;
-	display: block;
+	display: inline-block;
 	font-size: 0.8em;
+	
 }
 .lbl-create {
 	font-size: 1.1em;
@@ -522,9 +556,10 @@ textarea {
 	display: inline;
 }
 .file_div {
+	display:inline-block;
 	margin: 5px 10px;
 	padding: 0 5px;
-
+	width: 250px;
 	overflow: hidden;
 	box-sizing: border-box;
 }
@@ -544,11 +579,11 @@ label {
 	z-index: -1;
 }
 .profile_icon {
-	width: 20%;
+	width: 80%;
 	height: auto;
 	border-radius: 50%;
 	display: block;
-	margin: 15px auto 0;
+	margin: 15px;
 }
 .field {
 	border: 1px solid #30499B;
@@ -650,7 +685,7 @@ input[type="file"] {
 	background-color: rgba(41,77,107,.08);
 }
 .dashTitle {
-	display: inline;
+	
 	position: relative;
 	overflow: auto;
 }
@@ -663,7 +698,7 @@ input[type="file"] {
 .create-match {
 	width: 100%;
 	position: relative;
-	top: 50px;
+	top: 0;
 	left: 0;
 }
 
@@ -927,8 +962,8 @@ footer .copyright {
 }
 
 /* FORMS ------------------------------- */
-.form {
-	margin: 20px auto;
+.form-editUser {
+	margin: auto;
 }
 .form h6 {
 	display: inline;
@@ -1011,26 +1046,42 @@ table {
 }
 .profile {
 	margin: 20px;
+	margin-bottom: 40px;
 	padding: 10px;
+	display:flex;
+	flex-direction: column
 }
 .bigPic {
-	width: 200px;
-	height:200px;
+	
 	display: inline-block;
 	position: relative;
-	top: 40px;
-	height: auto;
+	top: 10px;
+}
+.bigPic img{
+	width: 160px;
+    height: auto;
 	border-radius: 50%;
 }
 .userData {
-	display: inline-block;
+	display: flex;
+	justify-content: space-around;
 	position: relative;
 	float: right;
 }
 .userData span {
+	display: flex;
+	flex-direction: column;
+	font-size: 1.2em;
+	line-height: 1.5;
+	margin: 5px;
+	font-weight: 400;
+}
+.userData span:first-child {
 	font-size: 1.5em;
 	line-height: 2.5;
-    margin: 5px;
+	font-weight: 600;
+	
+
 }
 
 .dashMenu {
@@ -1173,12 +1224,19 @@ table {
 	}
 	.dashSection {
 		width: 95%;
+		min-height: 690px;
 	}
 	.userData {
 		float:none;
 	}
 	.dropdown-left {
 		display: block;
+	}
+	.info {
+		display: inline-block;
+		width: 50%;
+		position: absolute;
+		right: 0;
 	}
 
 }
@@ -1228,7 +1286,7 @@ table {
 		.create-match {
 			position: relative;
 			right: 20px;
-			margin: 60px 0 0 0;
+			margin: 40px 0 0 0;
 		}
 		.section_tit {
 			margin-top: 50px;
@@ -1278,9 +1336,7 @@ table {
 			padding-top: 50px;
 			padding-bottom: 50px;
 		}
-		.profile_icon {
-			width: 45%;
-		}
+	
 		.faq_img {
 			background-image: url("../images/faq_img.jpg");
 			padding-top: 50px;
@@ -1331,7 +1387,7 @@ table {
 			width: 80%;
 		}
 		.dashSection {
-			width: 80%;
+			width: 70%;
 		}
 		.flexbox {
 			flex-direction: row;
