--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -705,6 +705,7 @@ input[type="file"] {
 /* MIS PARTIDOS ------------------------------- */
 
 .matches-container {
+	margin-top: 30px;
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
